# gaussian_process

./: README.md  pyproject.toml
notebooks/: bayesian_optimization_1d.ipynb  bayesian_optimization_2d.ipynb  bayesian_optimization_path_tracking.ipynb  f_shape_path.csv  gp_regression.ipynb  gp_regression_1d.ipynb  gp_regression_2d.ipynb
