[project]
name = "gaussian_process"
version = "0.1.0"
description = "gaussian process"
authors = [
    { name = "MizuhoAOKI", email = "mizuhoaoki1998@gmail.com" }
]
dependencies = [
    "notebook>=7.1.3",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gaussian_process"]